Updated source-drupal plugin to work exclusively with jsonapi

--- a/packages/source-drupal/package.json
+++ b/packages/source-drupal/package.json
@@ -19,5 +19,12 @@
   },
   "engines": {
     "node": ">=8.3"
+  },
+  "devDependencies": {
+    "@sindresorhus/slugify": "^0.6.0",
+    "lodash.foreach": "^4.5.0",
+    "lodash.map": "^4.6.0",
+    "lodash.reduce": "^4.6.0",
+    "lodash.uniqby": "^4.7.0"
   }
 }
