--- a/packages/source-drupal/package.json
+++ b/packages/source-drupal/package.json
@@ -12,15 +12,13 @@
     "drupal"
   ],
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "lodash": "^4.17.10"
   },
   "publishConfig": {
     "access": "public"
   },
   "engines": {
     "node": ">=8.3"
-  },
-  "devDependencies": {
-    "lodash": "^4.17.10"
   }
 }
